# DDCap

./: .gitignore  NOTE.md  coco_test.txt  lr_scheduler.py  misc.py  predict.py  pyproject.toml  requirements.txt  tf_adpt.py  tf_adpt_grad.py  train.py  train.sh  train_tclip.py
clip1/: model.py
utils/: convert_coco_results.py  convert_imagenet_results.py  eval_coco_results.py  eval_imagenet_results.py
